# align_mind

./: .env.example  .env_example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  pg-Dockerfile
migrations/2022-12-12-161502_table_profile_user/: up.sql
migrations/2022-12-12-161502_table_users/: up.sql
migrations/2022-12-12-174838_table_profile_user/: down.sql  up.sql
migrations/2022-12-12-174838_table_users/: up.sql
migrations/2022-12-12-181109_table_colors/: down.sql  up.sql
migrations/2022-12-12-182157_table_emotions/: down.sql  up.sql
migrations/2022-12-12-183540_table_places/: down.sql  up.sql
migrations/2022-12-12-213647_tables_thinks/: down.sql  up.sql
migrations/2022-12-12-220745_table_think_emotion/: down.sql  up.sql
migrations/2022-12-26-172247_change_color_add_user/: up.sql
migrations/2022-12-26-223827_add_column_to_trash/: up.sql
migrations/2023-01-08-180147_update_on_delete/: up.sql
migrations/2023-01-11-023901_remove_uniques_of_colors/: up.sql
migrations/2023-01-16-181207_remove_name_color/: up.sql
migrations/2023-01-17-194531_add_positive_or_negative_emotion/: up.sql
migrations/2023-02-19-152710_delete_username/: down.sql  up.sql
src/: jwt.rs  lib.rs  main.rs  schema.rs
src/models/: auth_model.rs  color_model.rs  emotion_model.rs  mod.rs  place_model.rs  response_model.rs  statistics_model.rs  think_emotion_model.rs  think_model.rs  user_model.rs
src/routes/: auth_route.rs  color_route.rs  emotion_route.rs  mod.rs  place_route.rs  statistics_route.rs  think_route.rs  trash_route.rs  users_route.rs
src/services/: auth_service.rs  color_service.rs  emotion_service.rs  mod.rs  place_service.rs  statistics_service.rs  think_emotion_service.rs  think_service.rs  trash_service.rs  users_service.rs
src/utils/: mod.rs  responde_request.rs
