[package]
name = "align_mind_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8.2", features = ["serde", "v4"] }
diesel = { version = "2.0.2", features = ["chrono", "postgres", "uuid"] }
dotenvy = "0.15"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = "1.0.149"
