[package]
name = "align_mind_server"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.2.2", features = ["serde", "v4","fast-rng","macro-diagnostics"] }
diesel = { version = "2.0.2", features = ["chrono", "postgres", "uuid", "serde_json"] }
dotenvy = "0.15"
rocket = { version = "0.5.0-rc.2", features = ["json", "uuid"] }
serde = { version = "1.0.149", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
chrono = { version = "0.4.23", features = ["serde"]}
bcrypt = "0.13"
jsonwebtoken = "8.2.0"
rocket-validation = "0.1.3"
validator = "0.16.0"
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
